# AI-Sales-Agents

./: .gitignore  README.md  main.py  pyproject.toml
agentsAi/: email_formatter.py  sales_agents.py  sales_manager.py
utils/: email.py
